<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    >

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" >
    </Space>

    <TextView
        android:id="@+id/ipaddr2"
        android:textIsSelectable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:contentDescription="@string/errors"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/launch" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/launch_twa_local" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>


    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/launch_first" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>



    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/ai" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/webview" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/csecond"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/csecond" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </Space>
    <Button
        android:id="@+id/cfirst"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cfirst" />
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" >
    </Space>

</LinearLayout>
